proceed function about regular expression

--- a/com-project-clean/src/main/resources/templates/admin/humanResource/blackList/selectBlackList.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/blackList/selectBlackList.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <style>
+    
+    </style>
 </head>
 <body>
 	<div th:replace="/common/Header.html"></div>
