--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacation.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacation.html
@@ -5,27 +5,13 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <style>
-        body {
-            margin-top: 100px;
-            font-family: 'Trebuchet MS', serif;
-            line-height: 1.6
-        }
-
-        /* 전체 크기 */
-        .container {
-            width: 1500px;
-            margin: 0 auto;
-        }
-        
-    </style>
 </head>
 
 
 <body>
 
-    <div class="container">
-    
+	<div th:replace="/common/Header.html"></div>
+	<div th:replace="/admin/adminAside.html"></div>    
       <div th:replace="admin/humanResource/vacation/selectAllVacationHeader"></div>
       
       	<form name="myVacationForm" action="/admin/select/selectMyVacation" id="myVacationForm">
@@ -78,8 +64,6 @@
                <!-- /* 페이징 버튼들어올 공간 */ -->
 			</div>
         
-    </div>
-    
     <script>
 
 
