--- a/com-project-clean/src/main/resources/templates/employee/checkList/selectMyCheckList.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/selectMyCheckList.html
@@ -61,7 +61,7 @@
 						$startTimeTd = $("<td>").addClass('st').text(data[index].businessStartTime);
 						$endTimeTd = $("<td>").text(data[index].businessEndTime);
 						$paymentTd = $("<td>").text(data[index].totalPayment)
-						$buttonTd = $("<button></button>").addClass('btn').addClass([index]).append("테스트");
+						$buttonTd = $("<button></button>").addClass('btn').addClass([index]).append("업무 시작");
 						
 						$tr.append($noTd);
 						$tr.append($nameTd);
@@ -117,7 +117,7 @@
 
 				}
 				
-			}, 1000)};
+			}, 2000)};
    	</script>
    	
 </body>
